--- a/css/hagerhult.css
+++ b/css/hagerhult.css
@@ -25,7 +25,7 @@ a:hover, a:focus {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 1.4em;
   margin: auto;
 }
@@ -34,12 +34,13 @@ h5 {
   font-family: 'Merriweather', serif;
   line-height: 1.8em;
   margin-top: 24px;
+  font-weight: 300;
   font-weight: light;
 }
 
 h6 {
   font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
+  font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
@@ -73,6 +74,7 @@ section {
 
 .secondary {
   font-family: 'Merriweather', serif;
+  font-weight: 300;
   font-size: 1.2em;
   line-height: 1.7em;
   display: flex;
