--- a/css/hagerhult.css
+++ b/css/hagerhult.css
@@ -2,10 +2,10 @@
 
 body {
   line-height: 1.4em;
-  font-weight: normal;
-  font-family: 'Montserrat', sans-serif;
-  color: #1F2439;
-  background: #F2F3F7;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
+  color: #1f2439;
+  background: #f2f3f7;
   -webkit-font-smoothing: antialiased;
   min-height: 100vh;
 }
@@ -23,107 +23,209 @@ img {
 a {
   text-decoration: none;
   position: relative;
-  color: #27A6FD;
+  color: #0098ff;
+  border-bottom: 1px solid #0099ff;
 }
 
 a:hover, a:focus {
   cursor: pointer;
-  color: #27A6FD;
+  color: #22a2f9;
+  border-bottom: none;
 }
 
-a:after{
-  content: '';
-  position: absolute;
-  width: 0; height: 1px;
-  display: block;
-  margin-top: -3px;
-  right: 0;
-  background: #27A6FD;
-  transition: width .3s ease;
-  -webkit-transition: width .3s ease;
-}
-
-a:hover:after{
-  width: 100%;
-  left: 0;
-  background: #27A6FD;
+p {
+  font-size: 1.2em;
+  font-weight: 200;
+  line-height: 1.6em;
+  margin-bottom: .8em;
 }
 
 b {
-  font-weight: 700;
-}
-
-h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  line-height: 1.4em;
-  margin: auto;
-}
-
-h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  color: #1F2439;
-}
-
-h5 {
-  font-family: 'Merriweather', serif;
-  line-height: 1.8em;
-  margin-top: 24px;
-  font-weight: 300;
-  font-weight: light;
-}
-
-h6 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+  font-weight: 600;
 }
 
 li {
   list-style: none;
 }
 
+span {
+  font-size: 1.1em;
+  font-weight: 200;
+  line-height: 1.6em;
+}
+
+h1 {
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 1em;
+  font-weight: 600;
+}
+
   /* Content */
 
 header {
-  height: 100px;
+  height: auto;
+  padding-top: 48px;
+  font-weight: 600;
+  font-size: 1.4em;
+}
+
+header a {
+  color: #1F2439;
+  border-bottom: none;
+}
+
+header a:hover {
+  color: #1f2439;
+}
+
+nav a:hover {
+  border-bottom: 2px solid #0098ff;
+}
+
+nav {
+  float: right;
+  margin-top: -2px;
+}
+
+nav a {
+  margin-left: 8px;
+  font-size: 0.7em;
 }
 
 section {
   height: auto;
   overflow: hidden;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
-article {
-  margin-bottom: 24px;
+.main {
+  display: flex;
+  min-height: 350px;
+}
+
+.secondary {
+  display: flex;
+  min-height: 350px;
+}
+
+#experience {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  text-align: center;
+}
+
+#experience img {
+  opacity: 0.4;
+  width: 50%;
+  padding: 5%;
+  float: left;
+}
+
+.flex {
+  margin: auto;
+}
+
+.row {
+
+}
+
+.portrait {
+border-radius: 24px;
+max-width: 240px;
+width: 100%;
 }
 
 footer {
-  padding-top: 24px;
-  text-align: center;
-  padding-bottom: 40px;
-  font-family: 'Merriweather', serif;
-  font-weight: 300;
-  font-size: 1em;
-  line-height: 1.8em;
-  color: #1F2439;
+  background: #10171f;
+  color: #bcbfcb;
+  padding-top: 64px;
+  padding-bottom: 64px;
 }
+
+footer a {
+  font-weight: 400;
+  color: #ffffff;
+  border-bottom: none;
+}
+
+footer a:hover {
+  border-bottom: 2px solid #ffffff;
+  color: #ffffff;
+}
+
+.social {
+  padding-top: 24px;
+}
+
+.social a {
+  fill: #bcbfcb;
+  border-bottom: none;
+  padding-right: 8px;
+}
+
+.social a:hover {
+  fill: #ffffff;
+  border-bottom: none;
+}
+
+.copy {
+  padding-top: 24px;
+}
+
+/* Work */
 
 .isteveryday {
-  background-color: #025876;
-  color: #ecf0f5;
+  background: #91d1df;
+  color: #00404e;
 }
 
-.ea {
-  background-color: #0085ff;
-  color: #ecf0f5;
+.kompanew {
+  background: #292a2b;
+  color: #edf5f7;
 }
 
-.kompa {
-  background-color: #273137;
-  color: #ecf0f5;
+.kompanew a {
+  color: #edf5f7;
+  border-bottom: none;
+}
+
+.kompanew a:hover {
+  color: #edf5f7;
+}
+
+.kompanew nav a:hover {
+  border-bottom: 2px solid #0098ff;
+}
+
+.eaccounting {
+  background: #fafafa;
+  color: #1f2439;
+}
+
+.presentation {
+  display: flex;
+  min-height: 50vh;
+  max-height: none;
+  padding-bottom: 24px;
+}
+
+.photo {
+  display: flex;
+  min-height: 50vh;
+  max-height: none;
+}
+
+.kompanew .photo img {
+  width: 100%;
+  max-width: 400px;
+}
+
+.readmore {
+  padding-top: 24px;
 }
 
 .button-outlined {
@@ -132,212 +234,145 @@ footer {
   padding: 0 30px;
   color: #ecf0f5;
   text-align: center;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 700;
-  line-height: 38px;
+  line-height: 34px;
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border-radius: 24px;
-  border: 1px solid #ecf0f5;
+  border: 2px solid #ecf0f5;
   cursor: pointer;
   box-sizing: border-box;
 }
 
 .button-outlined:hover {
-  background: rgba(236, 240, 245, 0.2);
   color: #ecf0f5;
+  background-color: rgba(0, 194, 255, 0.2);
+  border: 2px solid;
 }
 
-.button-outlined:after{
-  content: '';
-  position: absolute;
-  width: 0; height: 0px;
-  display: block;
-  margin-top: 0px;
-  right: 0;
-  background: none;
-  transition: none;
-  -webkit-transition: none;
+.isteveryday .button-outlined {
+  color: #00404e;
+  border-color: #00404e;
 }
 
-.button-outlined:hover:after{
-  width: 0%;
-  left: 0;
-  background: none;
+.kompanew .button-outlined {
+  color: #edf5f7;
+  border-color: #edf5f7;
+  border: 2px solid #edf5f7;
 }
+
+.eaccounting .button-outlined {
+  color: #1f2439;
+  border-color: #1f2439;
+}
+
+/* SUBPAGES */
 
 .label {
-  display: inline-block;
-  height: 38px;
-  padding: 0 20px;
-  color: #ecf0f5;
-  text-align: center;
-  font-weight: 300;
-  line-height: 38px;
-  letter-spacing: .1rem;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: transparent;
-  border-radius: 24px;
-  border: 1px solid rgba(236, 240, 245, 0.2);
-  box-sizing: border-box;
+  font-weight: 600;
   margin-right: 8px;
+  opacity: .5;
 }
 
-.main {
-  display: flex;
-  min-height: 40vh;
+.project {
+  background: #ffffff;
 }
 
-.secondary {
-  display: flex;
-  min-height: 30vh;
+.moreprojects {
+  border-radius: 24px;
+  padding: 32px;
+  margin-bottom: 32px;
 }
 
-.flex {
-  margin: auto;
+.moreprojects .photo {
+  display: none;
 }
 
 .extra-space {
   margin-bottom: 24px;
-}
-
-.portrait {
-  max-width: 160px;
-  border-radius: 16px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-
-    /* Projects */
-
-.projects {
-  background: white;
-  margin-top: -100px;
-  font-family: 'Merriweather', serif;
-  font-weight: 300;
-  font-size: 1em;
-  line-height: 1.7em;
-  color: #1F2439;
-}
-
-.image {
-  width: 100%;
-  height: auto;
-  min-height: 320px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  border-radius: 16px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.desc {
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-bottom: 24px;
-  font-family: 'Merriweather', serif;
-  font-weight: 300;
-  font-size: 1em;
-  line-height: 1.8em;
-  color: #1F2439;
-}
-
-.tag {
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-top: 24px;
-  padding-bottom: 8px;
-  font-size: 0.8em;
-  font-weight: 500;
-  font-family: 'Montserrat', sans-serif;
-  color: #848894;
-  font-style: normal;
-  text-transform: uppercase;
-}
-
-.prio {
-  color: #1F2439;
-  margin-right: 4px;
-}
-
-.stylist .image {
-  background-color: #27A6FD;
-  background-image: url('stylist.png');
-}
-
-.eaccounting .image {
-  background-color: #27A6FD;
-  background-image: url('appstore.png');
-}
-
-.kompanew .image {
-  background-color: #F2F3F7;
-  background-image: url('showcase.png');
-}
-
-.webshop .image {
-  background-color: #e4f1f4;
-  background-image: url('webshop.png');
-}
-
-article:hover > .image, article:focus > .image, article:active > .image {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  transform: scale(1.01);
-}
-
-    /* Experience */
-
-.experience {
-  background-color: #F2F3F7;
-  font-family: 'Merriweather', serif;
-  font-weight: 300;
-  font-size: 1em;
-  line-height: 1.7em;
-  color: #1F2439;
-}
-
-.experience img {
-  max-width: 100%;
-  padding: 24px;
   margin-top: 24px;
 }
 
-    /* Sloping divider */
+/* Small devices */
 
-.divider-pre {
-  height: 300px;
+@media (max-width: 399px) {
+  .moreprojects {
+    border-radius: 40px;
+    padding: 32px;
+    margin-top: -16px;
+    margin-bottom: 16px;
+    border: 16px solid #f2f3f7;
+  }
 }
 
-.divider-post {
-  height: 200px;
-  margin-top: -40px;
+
+/* Larger screen */
+
+@media (min-width: 768px) {
+  .main {
+    height: 70vh;
+    min-height: 600px;
+  }
+
+  .portrait {
+    max-width: 100%;
+  }
+
+  #experience img {
+    opacity: 0.4;
+    width: 50%;
+    float: left;
+  }
+
+  nav a {
+    margin-left: 16px;
+    font-size: 0.7em;
+  }
+
+  .presentation {
+    min-height: 70vh;
+  }
+
+  .photo {
+    min-height: 70vh;
+  }
+
+  .copy {
+    padding-top: 0px;
+  }
+
+  .secondary {
+    height: 40vh;
+    min-height: 400px;
+    padding-bottom: 24px;
+  }
+
+  .moreprojects {
+    padding: none;
+    overflow: hidden;
+    border-radius: 24px;
+    padding: 40px;
+    border: none;
+    margin-bottom: 32px;
+  }
+
+  .moreprojects .photo, .moreprojects .presentation {
+    min-height: 40vh;
+  }
+
 }
 
-.slope {
-  width:110%;
-  margin-left: -24px;
-  left:-5%;
-  background: white;
-  height: 200px;
+@media (min-width: 1000px) {
+  .moreprojects .photo {
+    display: flex;
+  }
 }
 
-.divider-pre .slope {
-  margin-top: 100px;
-  transform:rotate(2deg);
-}
-
-.divider-post .slope {
-  margin-top: -100px;
-  transform:rotate(-2deg);
-}
-
-    /* Waving hand animation */
+/* Waving hand animation */
 .wave {
   display: inline-block;
   -webkit-animation: wave 1s infinite;
@@ -426,27 +461,3 @@ article:hover > .image, article:focus > .image, article:active > .image {
       transform: rotate(0deg);
     }
   }
-
-/* Larger screen */
-
-@media (min-width: 768px) {
-  .main {
-    min-height: 40vh;
-  }
-  .secondary {
-    min-height: 30vh;
-  }
-}
-
-@media (min-width: 1000px) {
-  .main {
-    min-height: 50vh;
-  }
-  .secondary {
-    min-height: 34vh;
-  }
-  header {
-    height: 100px;
-    padding-bottom: 40px;
-  }
-}
