--- a/css/hagerhult.css
+++ b/css/hagerhult.css
@@ -236,7 +236,7 @@ footer a:hover {
 }
 
 .eaccounting {
-  background: #fafafa;
+  background: #F0F2F5;
   color: #1f2439;
 }
 
@@ -266,7 +266,7 @@ footer a:hover {
   max-height: none;
 }
 
-.kompanew .photo img {
+.kompanew .photo img, .eaccounting .photo img {
   width: 100%;
   max-width: 400px;
 }
@@ -321,7 +321,7 @@ footer a:hover {
 .eaccounting .button-outlined:hover {
 
   background: #1f2439;
-  color: #fafafa;
+  color: #F0F2F5;
 }
 
 /* SUBPAGES */
