--- a/css/hagerhult.css
+++ b/css/hagerhult.css
@@ -338,8 +338,8 @@ ul {
 
   article .columns {
     display: flex;
-    height: 50vh;
-    min-height:30vh;
+    height: 30vh;
+    max-height:30vh;
   }
 
   .ist {
