--- a/css/hagerhult.css
+++ b/css/hagerhult.css
@@ -30,7 +30,7 @@ a {
   left: 0;
   height: 700px;
   background: var(--white);
-  overflow: visible;
+  overflow: hidden;
   max-width: 100%;
   background-color: #29a9eb;
   background-image: linear-gradient(-19deg, #29a9eb 0%, #a35cc6 100%);
@@ -58,7 +58,7 @@ a {
 
 header {
   padding-top: 40px;
-  padding-bottom: 24px;
+  padding-bottom: 16px;
 }
 
 header h4 {
@@ -77,9 +77,7 @@ header a:hover {
 
 .pitch {
   display: flex;
-  margin-top: 24px;
-  height: 55vh;
-  min-height: 550px;
+  min-height: 600px;
   color: var(--light_white);
   max-width: 280px;
 }
